test/static/wrong/case1.kk.out
test/static/wrong/case1.kk(2,13): error: type fOO should be cased as foo