test/static/wrong/case1.kk
type foo
alias bar = fOO
